// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout golden snapshots > matches snapshot: couple 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 0
bounds: x=[-100..430] w=530 h=280
L0: Husband@0  Wife@170"
`;

exports[`layout golden snapshots > matches snapshot: four-generations 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 2
bounds: x=[-100..650] w=750 h=730
L0: G1a@110  G1b@280
L1: G2a@0  G2b@170  G2sib@390
L2: G3a@85  G3b@255
L3: G4a@70  G4b@270
family-nodes: (165,265) (250,415) (275,115)"
`;

exports[`layout golden snapshots > matches snapshot: half-siblings 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 1
bounds: x=[-100..660] w=760 h=430
L0: MotherA@30  Father@200  MotherB@370
L1: ChildA1@0  ChildA2@200  ChildB1@400
family-nodes: (180,115) (480,115)"
`;

exports[`layout golden snapshots > matches snapshot: nuclear-2 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 1
bounds: x=[-100..460] w=560 h=430
L0: Father@15  Mother@185
L1: Child1@0  Child2@200
family-nodes: (180,115)"
`;

exports[`layout golden snapshots > matches snapshot: nuclear-5 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 10
bounds: x=[-100..1060] w=1160 h=430
L0: Father@315  Mother@485
L1: Child1@0  Child2@200  Child3@400  Child4@600  Child5@800
family-nodes: (480,115)"
`;

exports[`layout golden snapshots > matches snapshot: real-tree-33 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 36
bounds: x=[-100..2600] w=2700 h=880
L-2: Martin@1000  Simona@1170  Adam@1390  Markéta@1560  Pavel@1780  Jana@1950  Jiří@2170  Ivana@2340
L-1: Lucie@1085  Filip@1255  Karel@1475  Eva@1645
L0: Marie@160  Matěj@330  Petr@865  Lukáš@1065  Ondřej@1385  Adéla@1565  Jakub@1795  Anna@1965  Jan@2145  Tereza@2315
L1: Vojtěch@0  Hana@170  Nela@490  David@660  Marek@1375  Ema@1575  Erik@1860  Klára@2030  Tomáš@2250
L2: Barbora@475  Petra@675
family-nodes: (325,115) (655,265) (1165,-185) (1250,-35) (1335,-185) (1438,-35) (1555,115) (1555,-185) (1725,-185) (2135,115)"
`;

exports[`layout golden snapshots > matches snapshot: remarriage-with-grandkids 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 1
bounds: x=[-100..665] w=765 h=730
L0: Grandpa@125  Grandma@295
L1: Wife1@40  Father@210  Wife2@380
L2: Son@15  SonWife@185  Daughter@405
L3: Grandkid1@0  Grandkid2@200
family-nodes: (95,265) (180,415) (290,115) (485,265)"
`;

exports[`layout golden snapshots > matches snapshot: single 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 0
bounds: x=[-100..260] w=360 h=280
L0: Solo@0"
`;

exports[`layout golden snapshots > matches snapshot: three-generations 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 2
bounds: x=[-100..665] w=765 h=580
L0: Grandpa@125  Grandma@295
L1: Father@15  Mother@185  Uncle@405
L2: Child1@0  Child2@200
family-nodes: (180,265) (290,115)"
`;

exports[`layout golden snapshots > matches snapshot: two-unrelated-families 1`] = `
"adjacency-violations: spouse=0 coparent=0
family-crossings: 0
raw-crossings: 0
bounds: x=[-100..820] w=920 h=430
L0: Dad@0  Mom@170  Dad2@390  Mom2@560
L1: Child1@85  Child2@475
family-nodes: (165,115) (555,115)"
`;
